--- a/moveit-next/src/styles/components/Countdown.module.css
+++ b/moveit-next/src/styles/components/Countdown.module.css
@@ -53,6 +53,22 @@
   transition: background-color 0.2s;
 }
 
-.countdownButton:hover{
+.countdownButton:not(:disabled):hover{
   background: var(--blue-dark);
+}
+
+.countdownButtonActive{
+  background: var(--blue-dark);
+  color: var(--white);
+}
+
+.countdownButtonActivenot:not(:disabled):hover{
+  background: var(--red);
+  color: var(--white);
+}
+
+.countdownButton:disabled{
+  background: var(--red);
+  color: var(--white);
+  cursor: not-allowed;
 }
